# requirements

./: CONTRIBUTING.md  README.md  py-docs.txt  py310-dev.txt  py311-dev.txt  py312-dev.txt  py313-dev.txt  py314-dev.txt  py38-dev.txt  py39-dev.txt  pyproject.toml  setup.py
.github/workflows/: ci.yaml  main.yaml  pr-rebase-on-push.yaml  upgrade-common-dependency.yaml  verify-requirements.yaml
