[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlrsp-requirements"
version = "1.0.1"
description = "Common Python requirements for DLRSP organization projects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DLRSP", email = "dlrsp-dev@users.noreply.github.com"}
]
keywords = ["requirements", "dependencies", "python", "dlrsp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/DLRSP/requirements"
Documentation = "https://github.com/DLRSP/requirements#readme"
Repository = "https://github.com/DLRSP/requirements"
Issues = "https://github.com/DLRSP/requirements/issues"

# Note: This package doesn't install any Python modules,
# it's just a metadata package for dependency tracking.
# The actual requirements files are in the repository root.

# bump-my-version configuration
[tool.bumpversion]
current_version = "1.0.1"
commit = true
tag = true
allow_dirty = true

# Update version in pyproject.toml (modern format - PEP 621)
[[tool.bumpversion.files]]
filename = "./pyproject.toml"

# Update version in setup.py (for compatibility)
[[tool.bumpversion.files]]
filename = "./setup.py"
